--- a/27-11-23.md
+++ b/27-11-23.md
@@ -1,2 +1,4 @@
+## Tarefas realizadas
 - Ajustei o back da api de estudantes para que o front da plataforma pegue o e-mail secundario
 
+## Anotações gerais
