--- a/28-11-23.md
+++ b/28-11-23.md
@@ -1,3 +1,5 @@
+## Tarefas realizadas
+
 - Bug de e-mail
 - Reset do cache ao mudar email na plataforma
 - Deploy da plataforma em QA
@@ -7,3 +9,5 @@
 - Geração de certificado de usuários
 - Criação de endpoints para seats em lives
 - Ajuste no front da Checkout para não mostrar btn de ir para plataforma
+
+## Anotações gerais
