--- a/29-11-23.md
+++ b/29-11-23.md
@@ -1,5 +1,9 @@
+## Tarefas realizadas
+
 - Bug do usuário não conseguir entrar na plataforma
 - Terminando os testes da refatoração
 - Correção para completar informações do endereço
 - Correção de valor do desconto no display do select
 - Ajuste na funcionalidade de email no front da plataforma
+
+## Anotações gerais
