--- a/30-11-23.md
+++ b/30-11-23.md
@@ -1,3 +1,7 @@
+## Tarefas realizadas
+
 - Correção no auto complete do endereço
 - Refatoração da função pra api
 - Erro de vinculo entre deal e contato
+
+## Anotações gerais
